--- a/src/translations/vi.json
+++ b/src/translations/vi.json
@@ -1,4 +1,28 @@
 {
+    "home-header": {
+        "speciality": "Chuyên khoa",
+        "search-doctor": "Tìm bác sĩ theo chuyên khoa",
+        "health-facilities": "Cơ sở y tế",
+        "select-room": "Chọn phòng khám",
+        "doctor": "Bác sĩ",
+        "select-doctor": "Chọn bác sĩ giỏi",
+        "fee": "Gói khám",
+        "check-health": "Khám sức khỏe tổng quát",
+        "support": "Hỗ trợ"
+
+    },
+
+    "banner": {
+        "title1": "Nền tảng y tế",
+        "title2": "chăm sóc sức khỏe toàn diện",
+        "child1": "Khám chuyên khoa",
+        "child2": "Khám từ xa",
+        "child3": "Khám tổng quát",
+        "child4": "Xét nghiệm y học",
+        "child5": "Khám chuyên khoa",
+        "child6": "Khám chuyên khoa"    
+    },
+
     "common": {
         "add": "Thêm",
         "edit": "Sửa",
