--- a/src/translations/vi.json
+++ b/src/translations/vi.json
@@ -20,7 +20,7 @@
         "child3": "Khám tổng quát",
         "child4": "Xét nghiệm y học",
         "child5": "Khám chuyên khoa",
-        "child6": "Khám chuyên khoa"    
+        "child6": "Khám nha khoa"    
     },
 
     "common": {
