--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -37,5 +37,24 @@
             "handbook": "Handbook",
             "manage-handbook": "Manage Handbook"
         }
+    },
+
+    "manage-user": {
+        "add": "Add a new user",
+        "password": "password",
+        "first-name": "First name",
+        "last-name": "Last name",
+        "phone-number": "Phone number",
+        "address": "Address",
+        "gender": "Gender",
+        "position": "Position",
+        "role": "Role",
+        "save": "Save user",
+        "image": "Avatar",
+        "choose-gender": "Choose gender",
+        "choose-position": "Choose position",
+        "choose-role": "Choose role",
+        "choose-image": "Choose image"
     }
+
 }
