Edit user redux

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -41,6 +41,7 @@
 
     "manage-user": {
         "add": "Add a new user",
+        "edit": "Edit user",
         "password": "password",
         "first-name": "First name",
         "last-name": "Last name",
