--- a/src/translations/vi.json
+++ b/src/translations/vi.json
@@ -60,5 +60,9 @@
         "choose-image": "Chọn hình ảnh"
 
         
+    },
+    "homepage": {
+        "outstanding-doctor": "Bác sĩ nổi bật tuần qua",
+        "more-info": "Xem thêm"
     }
 }
