--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -36,6 +36,9 @@
             "manage-specialty": "Manage Specialty",
             "handbook": "Handbook",
             "manage-handbook": "Manage Handbook"
+        },
+        "doctor" : {
+            "manage-schedule": "Manage Doctor's schedule"
         }
     },
 
