--- a/src/translations/vi.json
+++ b/src/translations/vi.json
@@ -38,6 +38,9 @@
             "handbook": "Cẩm nang",
             "manage-handbook": "Quản lý cẩm nang"
 
+        },
+        "doctor" : {
+            "manage-schedule": "Quản lý kế hoạch khám bệnh"
         }
     },
 
