--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -63,6 +63,12 @@
     "homepage": {
         "outstanding-doctor": "Out standing doctor",
         "more-info": "More info"
+    },
+    "manage-schedule": {
+        "title": "Manage doctor's examination plan",
+        "choose-doctor": "Choose doctor",
+        "choose-date": "Choose date",
+        "save": "Save info"
     }
 
 }
