--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -69,6 +69,13 @@
         "choose-doctor": "Choose doctor",
         "choose-date": "Choose date",
         "save": "Save info"
+    },
+   
+    "patient": {
+        "detail-doctor": {
+            "schedule": "Schedule",
+            "no-schedule": "There are no appointments during this time, please choose another time"
+        }
     }
 
 }
