--- a/src/translations/vi.json
+++ b/src/translations/vi.json
@@ -74,6 +74,12 @@
         "choose-doctor": "Chọn bác sĩ",
         "choose-date": "Chọn ngày",
         "save": "Lưu thông tin"
+    },
 
+    "patient": {
+        "detail-doctor": {
+            "schedule": "Lịch khám",
+            "no-schedule": "Không có lịch hẹn trong thời gian này vui lòng chọn thời gian khác"
+        }
     }
 }
