--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -83,7 +83,13 @@
             "select-doctor": "Select doctor",
             "intro": "Intro",
             "add": "Add info",
-            "save": "Save info"
+            "save": "Save info",
+            "price": "Price",
+            "payment": "Payment",
+            "province": "Province",
+            "nameClinic": "Clinic 's name",
+            "addressClinic": "Clinic 's address", 
+            "note": "Note"
         }
     }
 
