--- a/src/translations/vi.json
+++ b/src/translations/vi.json
@@ -88,7 +88,14 @@
             "select-doctor": "Chọn bác sĩ",
             "intro": "Thông tin giới thiệu",
             "add": "Tạo thông tin",
-            "save": "Lưu thông tin"
+            "save": "Lưu thông tin",
+            "price": "Giá khám bệnh",
+            "payment": "Phương thức thanh toán",
+            "province": "Tỉnh thành",
+            "nameClinic": "Tên phòng khám",
+            "addressClinic": "Tên phòng khám", 
+            "note": "Ghi chú"
+
         }
     }
 }
