--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -62,7 +62,9 @@
     },
     "homepage": {
         "outstanding-doctor": "Out standing doctor",
-        "more-info": "More info"
+        "more-info": "More info",
+        "speciality-popular": "Popular Specialty"
+
     },
     "manage-schedule": {
         "title": "Manage doctor's examination plan",
