--- a/src/translations/vi.json
+++ b/src/translations/vi.json
@@ -66,7 +66,8 @@
     },
     "homepage": {
         "outstanding-doctor": "Bác sĩ nổi bật tuần qua",
-        "more-info": "Xem thêm"
+        "more-info": "Xem thêm",
+        "speciality-popular": "Chuyên khoa phổ biến"
     },
 
     "manage-schedule": {
